<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/username"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileimage" />

    <TextView
        android:id="@+id/email_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameemail_gmail_com"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginTop="10dp"/>



    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6E8CFA"
        android:background="@drawable/round_corners"
        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
        android:text="@string/logout"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_username" />


</androidx.constraintlayout.widget.ConstraintLayout>