<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView_opps"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/opps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_of_account" />

    <TextView
        android:id="@+id/opps_not_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/opps_you_are_not_logged_in"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_opps" />

    <TextView
        android:id="@+id/savefavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/login_to_save_favourites"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opps_not_logged_in" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signin_fav"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savefavourites"
        android:layout_marginTop="30dp">

    </com.google.android.gms.common.SignInButton>





</androidx.constraintlayout.widget.ConstraintLayout>