<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".AboutusFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/About_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="30sp"
            android:textColor="@color/colorText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />
        <ImageView
            android:id="@+id/teamlogo"
            android:layout_below="@id/About_us"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:src="@drawable/logodroidlabtransparent" />

        <TextView
            android:id="@+id/aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teamlogo"
            android:textColor="@color/colorText"
            android:textSize="15sp"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text=""/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/coder"
            android:layout_below="@+id/aboutus_content"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/coder"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            />

        <TextView
            android:id="@+id/codername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutus_content"
            android:layout_toEndOf="@+id/coder"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorText"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/kushal_kanti_mehta_main_coder"/>
        <TextView
            android:id="@+id/coder_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/codername"
            android:layout_toEndOf="@+id/coder"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:layout_marginEnd="20dp"
            android:text="@string/responsible_for_all_backend_and_forntend_coding_of_the_application"
            />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/uiux"
            android:layout_below="@+id/coder"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/uiux"

            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <TextView
            android:id="@+id/uiuxname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coder_desc"
            android:layout_toEndOf="@+id/uiux"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/amit_sharma_main_ui_ux_desginer"/>
        <TextView
            android:id="@+id/uiux_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uiuxname"
            android:layout_toEndOf="@+id/uiux"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/responsible_for_the_look_and_workflow_of_the_application"
            />



    </RelativeLayout>

</ScrollView>


</RelativeLayout>