<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WallpaperViewActivity">


    <ImageView
        android:id="@+id/wallpaperViewSingle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00FFFFFF"

        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/wallpaper_view"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/set_wallpaper"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:backgroundTint="#6002EE"
        android:layout_marginBottom="50dp"
        android:text="@string/set_as_wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_wallpapersingleview"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/checkbox_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="src_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:button="@drawable/fav_checkbox" />

    <ImageButton
        android:id="@+id/imageButton_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_share_24"
        android:contentDescription="@string/share_button" />

    <ImageButton
        android:id="@+id/imageButton_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_share"
        app:srcCompat="@drawable/ic_baseline_arrow_downward_24"
        android:contentDescription="@string/download_button" />



</androidx.constraintlayout.widget.ConstraintLayout>